--- a/katieannelam/index.html
+++ b/katieannelam/index.html
@@ -7,6 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>hello sarah loki peepoo</h1>
+    <h1>Core 1 Interaction Lab</h1>
+    <h2>Section 1, Spring 2022</h2>
 </body>
 </html>
