--- a/lab-2022/index.html
+++ b/lab-2022/index.html
@@ -5,10 +5,21 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./style.css"/>
+    <style>
+      .link1 { background-color: hotpink;}
+      /* .link2 { color: coral; } */
+      .link3 {background-color: cornflowerblue;}
+     /* .link4 { color: coral; } */
+    </style>
 </head>
 <body>
-    <h1>hi! welcome to my page :)</h1>
-    <h3>my notes hub</h3>
+    <h1>katie's home page :D</h1>
+    <h3>how i take my notes!</h3>
+    <img  src="Image1.png" alt="this is my image" width="500" height=auto>
+    <blockquote>
+      this is how i organise my school folders on icloud
+      </blockquote>
     <ul>
 <li>notability</li>
 <li>notes app</li>
@@ -18,10 +29,10 @@
 
 <label for="digitallist">digital list</label>
 <select id="digitallist">
-  <option>icloudfolders</option>
-  <option>notabilityfolders</option>
+  <option>icloud folders</option>
+  <option>notability folders</option>
   <option>downloads</option>
-  <option>searchbar</option>
+  <option>search bar</option>
 </select>
 
 <label for="physicallist">physical list</label>
@@ -29,14 +40,17 @@
   <option>planner</option>
   <option>folders</option>
   <option>organization box</option>
-  <option>stickynotes</option>
+  <option>sticky notes</option>
 </select>
 
-<h3>platforms i use to stay organized</h3>
 <ul>
-<li><a href="https://notability.com/">notability</a></li>
-<li><a href="https://drive.google.com/">google drive</a></li>
-<li><a href="https://www.icloud.com/">icloud</a></li>
+<li><a class="link1" href="https://notability.com/">notability</a></li>
+<li><a class="link2" href="https://drive.google.com/">google drive</a></li>
+<li><a class="link3" href="https://www.icloud.com/">icloud</a></li>
+<li><a class="link4" href="https://apps.apple.com/ca/app/notes/id1110145109">notes app</a></li>
+<!-- <li id="link1"><a href="https://notability.com/">notability</a></li>
+<li id="link2"><a href="https://drive.google.com/">google drive</a></li>
+<li id="link3"><a href="https://www.icloud.com/">icloud</a></li> -->
 </ul>
 </body>
 </html>
