--- a/katieannelam/index.html
+++ b/katieannelam/index.html
@@ -5,9 +5,28 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" type="text/css" href="./style.css"/>
 </head>
 <body>
-    <h1>Core 1 Interaction Lab</h1>
-    <h2>Section 1, Spring 2022</h2>
+    <h1>core 2 interaction Lab</h1>
+    <h2>section 1 spring 2022</h2>
+    <h3>studio</h3>
+    <ul>
+    <li><a href="">project 1</a></li>
+    <li><a href="">project 2</a></li>
+    <li><a href="">project 3</a></li>
+    </ul>
+    <h3>lab</h3>
+    <ul>
+    <li><a href="">exercise 1</a></li>
+    <li><a href="">exercise 2</a></li>
+    <li><a href="">exercise 3</a></li>
+    </ul>
+    <h3>assignments</h3>
+    <ul>
+    <li><a href="">assignment 1</a></li>
+    <li><a href="">assignment 2</a></li>
+    <li><a href="">assignment 3</a></li>
+    </ul>
 </body>
 </html>
