--- a/katieannelam/index.html
+++ b/katieannelam/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" type="text/css" href="./style.css"/>
 </head>
 <body>
-    <h1>core 2 interaction Lab</h1>
+    <h1>core 2 interaction lab</h1>
     <h2>section 1 spring 2022</h2>
     <h3>studio</h3>
     <ul>
