--- a/World-Buildling/index.html
+++ b/World-Buildling/index.html
@@ -22,7 +22,7 @@
     </p>
 </div>
 <div id="rightbutton-container">
-<a href="page-2.html"><img id="frontbutton" src="FrontButton.png" width="200" height=auto/></a>
+<a href="page-2.html"><img id="frontbutton" src="Frontbutton.png" width="200" height=auto/></a>
 </div>
 </body>
 </html>
