--- a/lab-2022/Froggie/index.html
+++ b/lab-2022/Froggie/index.html
@@ -14,7 +14,7 @@
 <div class="navbardiv">
     <ul class="navbar">
         <li><a href="#">thank u, next</a></li>
-        <li><a href="#">work from home</a></li>
+        <li><a href="https://avatar-party.glitch.me/">work from home</a></li>
         <li><a href="#">sexyback</a></li>
       </ul>
     </div>
