--- a/lab-2022/Froggie/index.html
+++ b/lab-2022/Froggie/index.html
@@ -19,7 +19,7 @@
       </ul>
     </div>
 <div class=main>
-    <h1>🐸Froggie's Showcase🐸</h1>
+    <a href="https://katieannelam.github.io/Avatar-Website/" target=_blank><h1>🐸Froggie's Showcase🐸</h1></a>
     <h2>⭐ THE ORIGIN OF FROGGIE</h2>
     <p>Froggie is a representation of my online conversations and messages between friends and family. When I have a conversation with someone, I think about it as myself and the other person building upon what the person says. To me, that’s what keeps the conversation going and interesting. I’ve visualized this concept of things building upon one another through the game “exquisite corpse”. The exquisite corpse game is a collection of words or images that are collectively assembled to create a final piece. The exquisite corpse can only be done through a unified effort made by two people, much like a fruitful two-sided conversation. Also, I’ve created so many inside jokes with my friends and family online that if someone saw the texts it wouldn't make sense to them, which is reflective of how strange and unique each exquisite corpse is.
     </p>
