--- a/lab-2022/Froggie/index.html
+++ b/lab-2022/Froggie/index.html
@@ -44,20 +44,20 @@
     </p>
     <div class="row">
         <div class="column">
-          <img src="Storyboard.png">
+          <img src="assets/Storyboard.png">
         </div>
         <div class="column">
-        <img src="Initialsketch.png">
-          <img src="illustrator1.png">
-          <img src="illustrator 2.png">
-          <img src="frog.png">
+        <img src="assets/Initialsketch.png">
+          <img src="assets/illustrator1.png">
+          <img src="assets/illustrator 2.png">
+          <img src="assets/frog.png">
         </div>
         <div class="column">
-            <img src="Moodboard.png">
-            <img src="Rules.png">
-            <img src="final1.png">
-            <img src="final2.png">
-            <img src="final3.png">
+            <img src="assets/Moodboard.png">
+            <img src="assets/Rules.png">
+            <img src="assets/final1.png">
+            <img src="assets/final2.png">
+            <img src="assets/final3.png">
           </div>
     </div>
     </div>
