--- a/lab-2022/Froggie/index.html
+++ b/lab-2022/Froggie/index.html
@@ -13,9 +13,9 @@
 <body>
 <div class="navbardiv">
     <ul class="navbar">
-        <li><a href="#">thank u, next</a></li>
+        <li><a href="http://sarahdexma.github.io/lab-2022/blobbi/ ">thank u, next</a></li>
         <li><a href="https://avatar-party.glitch.me/">work from home</a></li>
-        <li><a href="#">sexyback</a></li>
+        <li><a href="https://yuzzi997.github.io/lang-freezone/index.html">sexyback</a></li>
       </ul>
     </div>
 <div class=main>
