--- a/3-World-Buildling/page-6.html
+++ b/3-World-Buildling/page-6.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>World Buildling</title>
-    <link rel="stylesheet" type="text/css" href="./1-world-buildling.css"/>
+    <link rel="stylesheet" type="text/css" href="./3-world-building.css"/>
 </head>
 <body>
     <div id="container"> 
