--- a/lab-2022/Art-in-code/page-2.html
+++ b/lab-2022/Art-in-code/page-2.html
@@ -185,6 +185,14 @@
     </script>
 </head>
 <body>
-    Hello
+  <div id="row-1">
+    <h3>I accept myself.</h3>
+  </div>
+  <div id="row-2a">
+    <a href="page-3.html"><h4>Yes</h4></a>
+  </div>
+  <div id="row-2b">
+    <a href="index.html"><h4>No</h4></a>
+  </div>
 </body>
 </html>
