--- a/lab-2022/Art-in-code/page-8.html
+++ b/lab-2022/Art-in-code/page-8.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ACCEPT YOURSELF! LOVE YOURSELF!</title>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>ACCEPT YOURSELF! LOVE YOURSELF!</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://use.typekit.net/xir8itl.css">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -181,27 +185,8 @@
     </script>
 </head>
 <body>
-<div id="big-div">
-</html>
-<div id="left-column">
-    <h1>
-    <a href="page-2.html">
-        <span class="accept">ACCEPT</span>
-        <br><br><span class="yourself1">YOURSELF</span> 
-        <br><br><span class="love">LOVE</span>
-        <br><br><span class="yourself2">YOURSELF</span>
-    </a>
-        <h2><a href="https://www.instagram.com/silver.matthew/?hl=en" target="_blank">Matthew Silver</a>
-            <br>Union Square, NYC
-            <br>2016
-        </h2>
-    </h1>
-</div>
-<div id="right-column">
-    <video class="videostyle" width="750" height="auto" controls>
-        <source src="video.mp4" type=video/mp4>
-    </iframe>
-</div>
-</div>
+    <div class="fade-in-image">
+        <a href="page-9.html"><img src="images/Heart-13.png" width="100%" height="auto"></a>
+    </div>
 </body>
 </html>
