--- a/1-World-Buildling/backup/World-Building-Copy/index.html
+++ b/1-World-Buildling/backup/World-Building-Copy/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <div id="container"> 
-        <p>my <a href="page-2.html">banana</a> is turning brown i should eat it soon bananas in pajamas are coming down the <a href="page-3.html">stairs</a> who invented stairs i’m scared of my grandma 
-        </p>
+    <p>my <a href="page-2.html">banana</a> is turning brown i should eat it soon bananas in pajamas are coming down the
+    </p>
     </div>
 </body>
 </html>
