--- a/lab-2022/Bubbles/bubbles.html
+++ b/lab-2022/Bubbles/bubbles.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>cheeky little baby</title>
+    <title>cheeky baby</title>
     <link rel="stylesheet" href="bubbles.css">
     <script src="bubbles.js" type="text/javascript" charset="utf-8" defer ></script>
 </head>
