pushing so i dont lose my work
push

--- a/FINAL-Inside-Outside/body-shape.html
+++ b/FINAL-Inside-Outside/body-shape.html
@@ -18,41 +18,24 @@
         <li><a href="eyes.html"><h3>eyes</h3></a></li>
         <li><a href="nose.html"><h3>nose</h3></a></li>
         <li><a href="lips.html"><h3>lips</h3></a></li>
-        <li><a href="face-shape.html"><h3 id="selected">face shape</h3></a></li>
+        <li><a href="face-shape.html"><h3>face shape</h3></a></li>
         <li><a href="makeup.html"><h3>makeup</h3></a></li>
         <li><a href="hair.html"><h3>hair</h3></a></li>
-        <li><a href="body-shape.html"><h3>body shape</h3></a></li>
+        <li><a href="body-shape.html"><h3 id="selected">body shape</h3></a></li>
         <li><a href="dullness.html"><h3>dullness</h3></a></li>
     </ul>
 
-<div class="big-gallery"> 
+<div class="big-gallery">
 <div class="gallery">
-    <img src="offline-images/offline-red-top-lady.png" width="600" height="600">
+    <img src="offline-images/offline-bikini-lady.png" width="600" height="600">
 </div>
 
 <div class="gallery">
-    <img src="offline-images/offline-tana-mogeau.png" width="600" height="600">
+    <img src="offline-images/offline-justin-bieber.png" width="600" height="600">
 </div>
 
 <div class="gallery">
-    <img src="offline-images/offline-beyonce.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="offline-images/offline-brown-hair-lady-selfie.png" width="600" height="600">
-</div>
-
-
-<div class="gallery">
-    <img src="offline-images/offline-green-hair-lady.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="offline-images/offline-khloe-kardashian.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="offline-images/offline-side-profile-lady.png" width="600" height="600">
+    <img src="offline-images/offline-man-staring-into-my-soul.png" width="600" height="600">
 </div>
 </div>
 
