--- a/FINAL-Inside-Outside/eyes.html
+++ b/FINAL-Inside-Outside/eyes.html
@@ -12,7 +12,7 @@
 </head>
 <body>
 <div id="landing">
-    <a href="index.html"><h2>OFFLINE</h2></a>
+    <a href="index.html"><h2 id="offline-title">OFFLINE</h2></a>
     <ul>
         <li><a href="skin.html"><h3>skin</h3></a></li>
         <li><a href="eyes.html"><h3 id="selected">eyes</h3></a></li>
@@ -47,7 +47,7 @@
 </div>
 </div>
 
-<a href="online-landing" id="arrow-right">
+<a href="online-landing.html" id="arrow-right">
     <img src="images/arrow2.png" width="25" height="auto">
 </a>
 </div> 
