--- a/FINAL-Inside-Outside/online-vs-offline-landing.html
+++ b/FINAL-Inside-Outside/online-vs-offline-landing.html
@@ -12,8 +12,11 @@
 </head>
 <body>
 <div id="landing">
-    <h1 id="offline-title">OFFLINE</h1>
-    <a href="skin.html"><img id="arrow" src="images/arrow2.png" width="100px" height="auto"></a>
+    <h1 id="online-vs-offline-title">ONLINE VS OFFLINE</h1>
+    <div id="twoarrows-online-vs-offline">
+    <a href="airbrushing.html"><img src="images/arrow-left.png" width="100px" height="auto"></a>
+    <a href="comparing-images.html"><img src="images/arrow2.png" width="100px" height="auto"></a>
+</div>
 </div>
 </body>
 </html>
