FINAL inside outside website
FINALLLL

--- a/FINAL-Inside-Outside/airbrushing.html
+++ b/FINAL-Inside-Outside/airbrushing.html
@@ -85,7 +85,7 @@
 </div>
 </div>
 
-<div id="yo">
+<div id="yo-4">
 <a href="online-landing.html">
     <img src="images/arrow-left.png" width="25" height="auto">
 </a>
