--- a/FINAL-Inside-Outside/enlarging.html
+++ b/FINAL-Inside-Outside/enlarging.html
@@ -15,8 +15,8 @@
     <a href="online-landing.html"><h2 id="online-title">ONLINE</h2></a>
     <ul id="online-menu">
         <li><a href="airbrushing.html"><h3>airbrushing</h3></a></li>
-        <li><a href="warping.html"><h3 id="online-title">warping</h3></a></li>
-        <li><a href="enlarging.html"><h3>enlarging</h3></a></li>
+        <li><a href="warping.html"><h3>warping</h3></a></li>
+        <li><a href="enlarging.html"><h3 id="online-title">enlarging</h3></a></li>
         <li><a href="shrinking.html"><h3>shrinking</h3></a></li>
         <li><a href="removing.html"><h3>removing</h3></a></li>
         <li><a href="filtering.html"><h3>filtering</h3></a></li>
@@ -25,7 +25,15 @@
 
 <div class="big-gallery">
 <div class="gallery">
-    <img src="online-images/online-red-top-lady.png" width="600" height="600">
+    <img src="online-images/online-side-profile-lady.png" width="600" height="600">
+</div>
+
+<div class="gallery">
+    <img src="online-images/online-tana-mogeau.png" width="600" height="600">
+</div>
+
+<div class="gallery">
+    <img src="online-images/online-justin-bieber.png" width="600" height="600">
 </div>
 
 <div class="gallery">
@@ -37,35 +45,11 @@
 </div>
 
 <div class="gallery">
-    <img src="online-images/online-green-hair-lady.png" width="600" height="600">
+    <img src="online-images/online-red-top-lady.png" width="600" height="600">
 </div>
 
 <div class="gallery">
-    <img src="online-images/online-brown-hair-lady-selfie.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="online-images/online-tana-mogeau.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="online-images/online-beyonce.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="online-images/online-justin-bieber.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="online-images/online-khloe-kardashian.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="online-images/online-side-profile-lady.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="online-images/online-zendaya.png" width="600" height="600">
+    <img src="online-images/online-man-staring-into-my-soul.png" width="600" height="600">
 </div>
 </div>
 
