--- a/FINAL-Inside-Outside/posing.html
+++ b/FINAL-Inside-Outside/posing.html
@@ -15,17 +15,17 @@
     <a href="online-landing.html"><h2 id="online-title">ONLINE</h2></a>
     <ul id="online-menu">
         <li><a href="airbrushing.html"><h3>airbrushing</h3></a></li>
-        <li><a href="warping.html"><h3 id="online-title">warping</h3></a></li>
+        <li><a href="warping.html"><h3>warping</h3></a></li>
         <li><a href="enlarging.html"><h3>enlarging</h3></a></li>
         <li><a href="shrinking.html"><h3>shrinking</h3></a></li>
         <li><a href="removing.html"><h3>removing</h3></a></li>
         <li><a href="filtering.html"><h3>filtering</h3></a></li>
-        <li><a href="posing.html"><h3>posing</h3></a></li>
+        <li><a href="posing.html"><h3 id="online-title">posing</h3></a></li>
     </ul>
 
 <div class="big-gallery">
 <div class="gallery">
-    <img src="online-images/online-red-top-lady.png" width="600" height="600">
+    <img src="online-images/online-nicki-minaj.png" width="600" height="600">
 </div>
 
 <div class="gallery">
@@ -33,31 +33,7 @@
 </div>
 
 <div class="gallery">
-    <img src="online-images/online-selena-gomez.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="online-images/online-green-hair-lady.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="online-images/online-brown-hair-lady-selfie.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="online-images/online-tana-mogeau.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="online-images/online-beyonce.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="online-images/online-justin-bieber.png" width="600" height="600">
-</div>
-
-<div class="gallery">
-    <img src="online-images/online-khloe-kardashian.png" width="600" height="600">
+    <img src="online-images/online-food.png" width="600" height="600">
 </div>
 
 <div class="gallery">
@@ -65,20 +41,23 @@
 </div>
 
 <div class="gallery">
-    <img src="online-images/online-zendaya.png" width="600" height="600">
+    <img src="online-images/online-khloe-kardashian.png" width="600" height="600">
+</div>
+
+<div class="gallery">
+    <img src="online-images/online-blonde-lady-selfie.png" width="600" height="600">
 </div>
 </div>
 
-<div id="yo">
-<a href="online-landing.html">
-    <img src="images/arrow-left.png" width="25" height="auto">
-</a>
-
-<a href="online-vs-offline-landing.html">
-    <img src="images/arrow2.png" width="25" height="auto">
-</a>
-</div>
+<div id="yo-3">
+    <a href="online-landing.html">
+        <img src="images/arrow-left.png" width="25" height="auto">
+    </a>
+    
+    <a href="online-vs-offline-landing.html">
+        <img src="images/arrow2.png" width="25" height="auto">
+    </a>
+    </div>
 </div> 
-
 </body>
 </html>
